<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    android:elevation="4dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageNike"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_2" />

        <TextView
            android:id="@+id/tvNike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-2dp"
            android:fontFamily="@font/crimson_pro"
            android:text="@string/nike"
            android:textAllCaps="true"
            android:textColor="@color/light_black"
            android:textSize="19sp"
            app:layout_constraintStart_toEndOf="@+id/imageNike"
            app:layout_constraintTop_toTopOf="@+id/imageNike" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crimson_pro"
            android:text="@string/pegasus_trail"
            android:textAllCaps="true"
            android:textColor="@color/light_black"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@+id/tvNike"
            app:layout_constraintTop_toBottomOf="@+id/tvNike" />

        <TextView
            android:id="@+id/tvSneakers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crimson_pro"
            android:text="Sneakers"
            android:textAllCaps="false"
            android:textColor="@color/light_black"
            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crimson_pro"
            android:text="@string/_27399"
            android:textColor="@color/light_black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageNike"
            app:layout_constraintStart_toStartOf="@+id/tvSneakers"
            app:layout_constraintTop_toBottomOf="@+id/tvSneakers" />

        <ImageView
            android:id="@+id/imageStar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="130dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvNike"
            app:layout_constraintStart_toEndOf="@+id/tvNike"
            app:layout_constraintTop_toTopOf="@+id/tvNike"
            app:srcCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/crimson_pro"
            android:text="5.0"
            android:textAllCaps="true"
            android:textColor="@color/light_black"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageStar"
            app:layout_constraintStart_toEndOf="@+id/imageStar"
            app:layout_constraintTop_toTopOf="@+id/imageStar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.cardview.widget.CardView>